Bug 378688 - Broken reflections in coverswitch on multi screen
Summary: Broken reflections in coverswitch on multi screen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-tabbox (other bugs)
Version First Reported In: 5.8.6
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 381720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-12 08:34 UTC by Mike Krutov
Modified: 2018-03-26 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bugged CoverSwitch in action (367.61 KB, image/jpeg)
2017-04-12 08:34 UTC, Mike Krutov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Krutov 2017-04-12 08:34:52 UTC
Created attachment 104982 [details]
Bugged CoverSwitch in action

I've two screens: 

1366x768
1920x1080

And I use cover switch task switcher. This task switcher behaves in a weird way when I use it in said configuration, see an attached picture.
Comment 1 Martin Flöser 2017-06-27 14:47:23 UTC
*** Bug 381720 has been marked as a duplicate of this bug. ***
Comment 2 Gunter Ohrner 2017-06-27 16:35:12 UTC
Ok, confirmed ob KDE Neon 5.10.2. The switcher never worked correctly as far as I can remember, however.
Comment 3 Gunter Ohrner 2017-06-27 16:35:54 UTC
(BTW, the duplicate 381720 also contains two screenshots showing slightly different misbehaviour.)
Comment 4 Igor Poboiko 2018-03-25 10:30:52 UTC
Git commit e3f0b537b6b4684ef2ed013c61fdf6801f879db9 by Igor Poboiko.
Committed on 25/03/2018 at 10:26.
Pushed by poboiko into branch 'master'.

[effects/coverswitch] Fix broken reflection on multi-monitor setup

ModelViewMatrix used to paint windows (which is aware about
multi-monitor configuration) was overriden by reflectionMatrix when
painting reflections, leading to wrong placement of reflections.
Now we just multiply old matrix and reflection matrix.

Differential Revision: https://phabricator.kde.org/D10465

M  +1    -2    effects/coverswitch/coverswitch.cpp

https://commits.kde.org/kwin/e3f0b537b6b4684ef2ed013c61fdf6801f879db9
Comment 5 Fabian Vogt 2018-03-26 16:58:25 UTC
Git commit 2eded918977f8c8cefdd5c938d11fc57dc9ce1fe by Fabian Vogt, on behalf of Igor Poboiko.
Committed on 26/03/2018 at 16:57.
Pushed by fvogt into branch 'Plasma/5.12'.

[effects/coverswitch] Fix broken reflection on multi-monitor setup

ModelViewMatrix used to paint windows (which is aware about
multi-monitor configuration) was overriden by reflectionMatrix when
painting reflections, leading to wrong placement of reflections.
Now we just multiply old matrix and reflection matrix.

Differential Revision: https://phabricator.kde.org/D10465

M  +1    -2    effects/coverswitch/coverswitch.cpp

https://commits.kde.org/kwin/2eded918977f8c8cefdd5c938d11fc57dc9ce1fe